<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="Početna"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:id="@+id/workout"
        android:title="Trening"
        android:icon="@drawable/baseline_sports_martial_arts_24"/>

    <item
        android:id="@+id/recipes"
        android:title="Recepti"
        android:icon="@drawable/baseline_fastfood_24"/>
</menu>